--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
 		"start": "node index.js"
 	},
 	"dependencies": {
+		"body-parser": "1.19.0",
+		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.16.4",
-		"cors": "^2.8.5"
+		"mongodb": "^4.9.0",
+		"mongoose": "6.0.12"
 	},
 	"repository": {
 		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
